Updated tailwind, fixed image stretch, react up

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,3 @@ html,
 .floatyThingy {
   top: -132px;
 }
-
-.h-hero {
-  height: 90vh;
-}
